--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -7,5 +7,17 @@
 /*
 * Custom
 */
-@import "partials/variable";
+// Basic styles
+@import "components/variables.scss";
+@import "components/mixins.scss";
+@import "components/base.scss";
+@import "components/layout.scss";
+// Styles blocks
+@import "components/modules/page-header.scss";
+@import "components/modules/page-footer.scss";
+@import "components/modules/index-content.scss";
+// Other modules
+@import "components/modules/common.scss";
+// Styles states
+@import "components/state.scss";
 
